<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <com.jiangchen.college.views.TitleView
        android:id="@+id/vaildate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_right="@string/ok"
        app:tv_title="@string/app_name"
        app:tv_tv_right_visibility="visable" />


    <com.jiangchen.college.views.MEditText
        android:id="@+id/vaildate_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        app:me_del_enable="true"
        app:me_lable_src="@drawable/selector_phone"
        app:me_hint="@string/phone" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vaildate_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/vaildate_code"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/vaildate_code"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:enabled="false"
            android:background="@drawable/selector_bt_bg_red"
            android:text="获得验证码"
            android:textSize="@dimen/title_frot_size_16" />

        <com.jiangchen.college.views.MEditText
            android:id="@+id/vaildate_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/vaildate_get_code"
            app:me_del_enable="true"
            app:me_eye_enable="true"
            app:me_lable_src="@drawable/selector_code"
            app:me_hint="@string/vaildate_code"
            app:me_input_type="password" />


    </RelativeLayout>


</LinearLayout>
