<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jiangchen.college.views.TitleView
        android:id="@+id/update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_right="@string/ok"
        app:tv_title="@string/register"
        app:tv_tv_right_visibility="gone" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center_horizontal"
        android:text="已经发送验证码到"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/update_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="15011011718"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/update_get_code"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/vaildate_code"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/vaildate_code"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_bt_bg_red"
            android:enabled="false"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="获得验证码"
            android:textColor="@color/selector_bt_bg"
            android:textSize="@dimen/title_frot_size_16" />

        <com.jiangchen.college.views.MEditText
            android:id="@+id/update_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/update_get_code"
            app:me_del_enable="true"
            app:me_eye_enable="true"
            app:me_hint="@string/vaildate_code"
            app:me_input_type="number"
            app:me_lable_src="@drawable/selector_code"
            app:me_maxlength="4" />


    </RelativeLayout>

</LinearLayout>